--- a/Blazor.ECommerce/Components/Layout/NavBar.razor
+++ b/Blazor.ECommerce/Components/Layout/NavBar.razor
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <a class="navbar-brand" href="">
             <img src="/images/Logo.png" alt="Bootstrap" width="30" height="24">
-            E Commerce App
+            খাঁটি (Khati)
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-label="Toggle navigation" >
