--- a/Blazor.ECommerce/Components/Layout/NavMenu.razor
+++ b/Blazor.ECommerce/Components/Layout/NavMenu.razor
@@ -4,7 +4,7 @@
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">E Commerce App</a>
+        <a class="navbar-brand" href="">খাঁটি (Khati)</a>
     </div>
 </div>
 
