--- a/Blazor.ECommerce/Components/Pages/ProductPages/ProductUpsert.razor
+++ b/Blazor.ECommerce/Components/Pages/ProductPages/ProductUpsert.razor
@@ -15,7 +15,7 @@
 }
 else
 {
-    <div class="card shadow border-0 mt-4">
+    <div class="card shadow border-0 m-4">
         <div class="card-header bg-black bg-gradient m-lg-0 py-3">
             <div class="row">
                 <div class="col-12 text-center">
@@ -200,7 +200,10 @@ else
             var imageFullPath = Path.Combine(_directoryPath, imageName);
 
             if (!File.Exists(imageFullPath))
+            {
+                Product.ImageUrl = null;
                 return;
+            }
 
             File.Delete(imageFullPath);
 
